Question no: 6 done

--- a/index-6.html
+++ b/index-6.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <style>
+      html {
+        font-family: "Gilroy";
+      }
+      #tabs {
+        display: flex;
+        gap: 20px;
+      }
+      .tab {
+        padding: 12px 22px;
+        background-color: #eaeaea;
+        border: 2px solid #dadada;
+        border-radius: 4px;
+        font-weight: 700;
+      }
+
+      h3{
+        margin-top: 20px;
+        display: none;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="tabs">
+      <div id="home" class="tab">Home</div>
+      <div id="about" class="tab">About</div>
+      <div id="contact" class="tab">Contact</div>
+    </div>
+    <h3 id="hometext">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+      facere, saepe quas et ea, harum earum minus odit excepturi at explicabo
+      exercitationem ratione deleniti voluptatum nam, aut porro. Fugiat, nisi
+      iure et quod soluta enim. Rem quidem libero labore placeat modi quis amet
+      dolorum tempore nisi reprehenderit. Porro odit molestias itaque adipisci
+      maiores rerum? Modi consequatur reprehenderit ea, et iure odio fugiat
+      dolore ducimus. Minus excepturi quaerat unde corporis possimus placeat,
+      adipisci, reiciendis reprehenderit veniam ex, eius dolorem? Molestiae
+      corrupti vel assumenda velit, totam ut debitis non cupiditate tenetur,
+      quam facilis maxime adipisci vero voluptatem maiores eveniet ratione
+      earum, nobis eligendi quos sit perferendis voluptates molestias? Assumenda
+      porro nobis optio! Perspiciatis minima deserunt quas. Vero eos totam quia
+      culpa vel, placeat facilis amet consequuntur qui ducimus repudiandae quis
+      quidem perferendis expedita dicta provident suscipit atque blanditiis?
+      Cumque, veritatis reiciendis! Culpa dolore repellat dignissimos animi
+      asperiores ut, aspernatur delectus libero minima natus consequuntur alias
+      et inventore deserunt accusamus aperiam molestias. Unde, aspernatur,
+      laboriosam libero facere possimus accusantium iure ea atque voluptate
+      similique quidem quo veritatis eos alias. Consectetur culpa itaque
+      deserunt libero. Fuga aspernatur suscipit veniam cum laudantium mollitia
+      corporis magni rerum, sit eligendi ipsum veritatis quasi est laboriosam
+      sint. Vitae quas, excepturi impedit distinctio aspernatur totam possimus
+      unde voluptas. Molestiae, explicabo vitae recusandae fugiat vero
+      voluptates molestias minus ad iusto impedit magni iste! Adipisci, aliquam
+      vel esse placeat nostrum officia.
+    </h3>
+    <h3 id="abouttext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur cupiditate aliquam quisquam. Distinctio quis fugiat aspernatur reprehenderit, accusamus expedita perferendis voluptates maxime obcaecati officia similique, odit earum eligendi quam cum aliquid nam eaque asperiores assumenda veritatis nobis nemo? Enim voluptatibus numquam sunt laborum rerum vero, cum officia tempore commodi velit neque saepe tempora animi harum nihil quaerat maiores iste ipsa ullam temporibus facilis sit repellendus! Fuga blanditiis quisquam adipisci exercitationem, quia eligendi aperiam quos quis consequatur tenetur! Voluptates laudantium ea, dolorem dignissimos provident error mollitia consequuntur harum doloremque minima vitae in omnis, nesciunt excepturi cum, nostrum itaque qui. Porro adipisci quas consequatur similique odit enim doloribus aliquam minus deserunt perspiciatis architecto, sapiente est? Ipsam a totam minus vero pariatur, delectus explicabo necessitatibus aperiam commodi nulla voluptatem culpa maiores quas dolore aspernatur cupiditate, cumque natus. Sunt sit excepturi reprehenderit tempore, deserunt neque explicabo, porro pariatur vel dignissimos omnis aut perferendis?</h3>
+    <h3 id="contacttext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit perferendis, assumenda, sit veritatis ipsum itaque magni veniam sed suscipit consequatur nostrum, incidunt voluptatem! Maiores quae ea eligendi enim totam inventore deserunt voluptatem deleniti, sit architecto mollitia! Facilis iure tempora, repudiandae voluptate possimus perspiciatis tenetur ipsum deleniti inventore maxime nisi id explicabo porro neque excepturi molestias laborum deserunt blanditiis sit eveniet sapiente animi? Veniam veritatis ipsa maiores quibusdam minus a quam accusantium, qui fuga numquam eum voluptate sed vel rem omnis beatae aspernatur alias possimus sint. Quas tempore, non est consequatur nam provident deserunt esse, vitae eveniet saepe, dolores doloremque mollitia sint necessitatibus reiciendis neque similique dolorem? Aliquid animi eum odio quo veniam exercitationem natus asperiores qui numquam, dolor hic, doloribus doloremque eligendi ad non rerum. Necessitatibus vel quod sit, quibusdam quam hic non id dignissimos alias consequatur eveniet aperiam nesciunt officiis at saepe deserunt! Id, dolorem. Vitae, eum eligendi! Qui illum autem dolores facere totam quam nulla, excepturi repudiandae commodi quo eius voluptatibus quos accusantium sapiente quibusdam minus, ipsum, dicta ullam aperiam similique. Eligendi recusandae blanditiis unde debitis, optio officiis adipisci autem! Facere, delectus? Qui veritatis ratione excepturi porro voluptates totam illum ex expedita, autem nam odit quo voluptate itaque possimus sed officia quisquam nemo eveniet nesciunt nisi quia rerum dicta ullam ut. Nostrum amet blanditiis soluta officiis porro, libero obcaecati explicabo, quisquam impedit mollitia, qui possimus dolores ea natus atque sapiente animi dignissimos nesciunt. Eveniet corrupti aspernatur odio illum ea facere? Eum rerum sunt, eos exercitationem accusamus similique provident velit ea commodi consequuntur eveniet quasi iusto reprehenderit qui id quos illum, cupiditate illo, dicta autem voluptatem. Enim architecto qui, ratione animi eveniet eaque quae, nam perferendis sed repellat ducimus explicabo itaque corporis provident ipsam ipsum quidem alias molestiae amet atque temporibus quam, sapiente fugit reprehenderit? Nulla labore sit minima iusto laboriosam repellat accusantium voluptatibus sequi quasi, adipisci animi fugit mollitia earum saepe quos enim eaque! Tenetur nostrum fugit quo similique voluptas mollitia amet sapiente ullam maxime id dolorem a, veritatis quae repellendus, rem facere distinctio. Illum id voluptatibus accusantium possimus, dolor sequi voluptatum animi, accusamus facilis voluptate commodi quos.</h3>
     <script src="dom-6.js"></script>
-</body>
+  </body>
 </html>
